fix: broken layout on mobile

--- a/assets/css/object/project/index.scss
+++ b/assets/css/object/project/index.scss
@@ -16,7 +16,7 @@
 
     &-avatar {
       display: inline-block;
-      margin-right: 18px;
+      margin-right: 16px;
     }
   }
 }
